Fixed styling bug in facet where the floating # [checkbox] control at the top right corner can push the facet body to the left if the font size is too small.

--- a/exhibit/branches/2.0/src/webapp/api/bundle.css
+++ b/exhibit/branches/2.0/src/webapp/api/bundle.css
@@ -250,6 +250,7 @@ span.exhibit-facet-header-detail {
 }
     
 div.exhibit-facet-body-frame {
+    clear:          both;
 }
 
 div.exhibit-facet-body {
