--- a/exhibit/branches/2.0/src/webapp/api/styles/util/facets.css
+++ b/exhibit/branches/2.0/src/webapp/api/styles/util/facets.css
@@ -28,6 +28,7 @@ span.exhibit-facet-header-detail {
 }
     
 div.exhibit-facet-body-frame {
+    clear:          both;
 }
 
 div.exhibit-facet-body {
